# SimpleQtLogger

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: build_and_test_linux.yml  build_and_test_macos.yml  build_and_test_windows.yml  build_linux.yml.disabled  build_macos.yml.disabled  build_windows.yml.disabled  test_linux.yml.disabled  test_macos.yml.disabled  test_windows.yml.disabled
CMake/: BuildThirdPartyProject.cmake  IncludeThirdParty.cmake  SanitizerConfig.cmake  SourceGroups.cmake  lsan_leak_suppressions.supp
Configs/: .clang-format  .clang-tidy  Doxyfile.in  config.xlaunch
QT_Project/: CMakeLists.txt  Config.h.in  main.cpp
QT_Project/CMake/: Config.cmake.in  install.cmake
QT_Project/Headers/: ApiMacro.h
QT_Project/Headers/SimpleQtLogger/: ApiMacro.h  QtFileAppender.h  QtHtmlFormatter.h  QtJsonFormatter.h  QtLoggerAdapter.h
QT_Project/Sources/: QtFileAppender.cpp  QtHtmlFormatter.cpp  QtJsonFormatter.cpp
QT_Project_Tests/: CMakeLists.txt  main.cpp
QT_Project_Tests/Headers/SimpleQtLogger/: QtFileAppenderTest.h  QtHtmlFormatterTest.h  QtJsonFormatterTest.h  QtLoggerAdapterTest.h
QT_Project_Tests/Sources/SimpleQtLogger/: QtFileAppenderTest.cpp  QtHtmlFormatterTest.cpp  QtJsonFormatterTest.cpp  QtLoggerAdapterTest.cpp
Scripts/: generate_compile_commands.sh
Scripts/Linux/: build_and_run_tests.sh  build_release.sh
Scripts/Linux/Helpers/: build_script.sh  setup_python.sh  setup_qt.sh
Scripts/Mac/: build_and_run_tests.sh  build_release.sh
Scripts/Mac/Helpers/: build_script.sh  setup_python.sh  setup_qt.sh
Scripts/Win/: build_and_deploy.sh  build_and_run_tests.sh  build_release.sh  installer.nsi
Scripts/Win/Helpers/: build_script.sh  setup_python.sh  setup_qt.sh  utils.sh
